--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "recharts": "^3.7.0",
     "react-dom": "^19.2.4",
-    "lucide-react": "^0.563.0",
-    "react": "^19.2.4",
-    "@google/genai": "^1.41.0",
-    "googleapis": "^144.0.0"
+    "lucide-react": "^0.344.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "uuid": "^9.0.1",
+    "google-auth-library": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
