--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "recharts": "^3.7.0",
-    "react-dom": "^19.2.4",
+    "recharts": "^2.12.0",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "@google/genai": "^0.1.1",
     "uuid": "^9.0.1",
     "google-auth-library": "^9.0.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
+    "@types/react": "^18.2.56",
+    "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
