--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "react-dom": "^18.2.0",
     "@google/generative-ai": "^0.12.0",
     "uuid": "^9.0.1",
-    "google-auth-library": "^9.0.0"
+    "google-auth-library": "^9.0.0",
+    "pdfkit": "^0.13.0"
   },
   "devDependencies": {
+    "@types/pdfkit": "^0.13.3",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^5.0.0",
