--- a/package.json
+++ b/package.json
@@ -4,25 +4,31 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "tsx server.ts",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node api/server.js"
   },
   "dependencies": {
-    "recharts": "^2.12.0",
+    "@google/generative-ai": "^0.12.0",
+    "body-parser": "^2.2.2",
+    "cors": "^2.8.6",
+    "express": "^5.2.1",
+    "google-auth-library": "^9.0.0",
     "lucide-react": "^0.344.0",
+    "pdfkit": "^0.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@google/generative-ai": "^0.12.0",
-    "uuid": "^9.0.1",
-    "google-auth-library": "^9.0.0",
-    "pdfkit": "^0.13.0"
+    "recharts": "^2.12.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/express": "^5.0.6",
     "@types/pdfkit": "^0.13.3",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^5.0.0",
+    "tsx": "^4.21.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
