--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,16 +1,11 @@
 {
     "extends": "../tsconfig.json",
     "compilerOptions": {
-        "module": "CommonJS",
+        "module": "ESNext",
         "moduleResolution": "node",
-        "target": "ES2019",
-        "lib": [
-            "ES2019"
-        ],
-        "isolatedModules": false,
-        "noEmit": false,
-        "allowImportingTsExtensions": false,
+        "target": "ESNext",
         "esModuleInterop": true,
+        "allowJs": true,
         "types": [
             "node"
         ]
