--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "react-dom": "^18.2.0",
     "recharts": "^2.12.0",
     "uuid": "^9.0.1",
-    "@vercel/postgres": "^0.10.0"
+    "@vercel/postgres": "^0.10.0",
+    "archiver": "^7.0.1"
   },
   "devDependencies": {
+    "@types/archiver": "^6.0.2",
     "@types/express": "^5.0.6",
     "@types/pdfkit": "^0.13.3",
     "@types/react": "^18.2.56",
