--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.12.0",
+    "@vercel/postgres": "^0.10.0",
+    "archiver": "^7.0.1",
     "body-parser": "^2.2.2",
     "cors": "^2.8.6",
+    "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "google-auth-library": "^9.0.0",
     "lucide-react": "^0.344.0",
@@ -20,9 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.12.0",
-    "uuid": "^9.0.1",
-    "@vercel/postgres": "^0.10.0",
-    "archiver": "^7.0.1"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/archiver": "^6.0.2",
